Fixed some bugs with text alignment in h1 and removed margin issues.

--- a/css/experience.css
+++ b/css/experience.css
@@ -18,7 +18,6 @@
   position: relative;
   background-color: #101010;
   padding: 10px 0;
-  
 }
 
 .experience-container {
@@ -211,7 +210,11 @@ box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Add a black shadow around the button
 /* Small screens (phones)*/
 @media (max-width: 600px) { /* Adjust the max-width as needed for targeting phone screens */
   .title-container {
-    align-items: center; /* Centers the content for smaller screens */
+    align-items: center;
+    justify-content: center;
+  }
+  #top-page-exp{
+    margin-bottom: 0px;
   }
   .btns {
     display:none; /*no need for the buttons when on the phone*/
