--- a/css/nav.css
+++ b/css/nav.css
@@ -51,58 +51,58 @@ nav ul li:hover {
 /*STYLING FOR THE MOBILE NAVIGATION BAR============================================================VVVVV*/
 /* Hamburger Icon */
 .hamburger-icon {
-display: none;
-cursor: pointer;
-font-size: 30px;
-color: #d8d5db;
-margin-right: 10px;
+  display: none;
+  cursor: pointer;
+  font-size: 30px;
+  color: #d8d5db;
+  margin-right: 10px;
 }
 
 /* Mobile Menu */
 .mobile-menu {
-position: fixed;
-top: 0;
-right: -100%; /* Start off the screen */
-height: 100vh;
-width: 250px;
-background-color: #101010;
-box-shadow: -2px 0px 5px rgba(0,0,0,0.5);
-transition: right 0.3s ease-out;
-z-index: 15;
-display: flex;
-flex-direction: column;
-padding-top: 60px; /* Adjust based on your nav height */
+  position: fixed;
+  top: 0;
+  right: -100%; /* Start off the screen */
+  height: 100vh;
+  width: 250px;
+  background-color: #101010;
+  box-shadow: -2px 0px 5px rgba(0,0,0,0.5);
+  transition: right 0.3s ease-out;
+  z-index: 15;
+  display: flex;
+  flex-direction: column;
+  padding-top: 45px; /* Adjust based on your nav height */
 }
 
 .mobile-menu a {
-padding: 20px;
-color: #d8d5db;
-text-decoration: none;
-border-bottom: 1px solid #444;
-font-family: 'Courier New', Courier, monospace;
-font-size: 20px;
+  padding: 20px;
+  color: #d8d5db;
+  text-decoration: none;
+  border-bottom: 1px solid #444;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 20px;
 }
 
 .nav-logo{
 /*make sure size is good for logo in the nav bar.*/
-width: 30px;
+  width: 30px;
 }
 
 .desktop-menu {
-display: flex;
-align-items: center; /* This ensures all items in the menu are vertically centered */
-justify-content: center; /* Center menu items horizontally if needed */
-padding: 0;
-margin: 0;
-list-style-type: none;
+  display: flex;
+  align-items: center; /* This ensures all items in the menu are vertically centered */
+  justify-content: center; /* Center menu items horizontally if needed */
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
 
 .desktop-menu a {
-display: flex;
-align-items: center; /* Aligns the text and logo vertically */
-text-decoration: none;
-color: #d8d5db;
-padding: 10px 15px;
+  display: flex;
+  align-items: center; /* Aligns the text and logo vertically */
+  text-decoration: none;
+  color: #d8d5db;
+  padding: 10px 15px;
 }
 
 .menu-icon {
@@ -135,7 +135,9 @@ padding: 10px 15px;
 
 /* Adjusting visibility on smaller screens */
 @media (max-width: 768px) {
-
+  nav{
+    padding: 6px; /*makes the mobile nav bar a little bigger*/
+  }
   .hamburger-icon {
     display: flex;
     justify-content: space-between;
